modules/gdscript/tests/scripts/parser/errors/invalid_array_destructuring_with_missing_closing_bracket.gd
func test():
    var [a, b, c = [1, 2, 3] # Should error